Pagina que suportará menu de opcoes adicionada e configurada no painel

--- a/Frontend/sistema/menu_opcoes.html
+++ b/Frontend/sistema/menu_opcoes.html
@@ -1,11 +1,24 @@
-<div id="cadastro-toggle">
-	<details>
-		<summary>Cadastros</summary>
+<link rel="stylesheet" type="text/css" href="../css/menu_opcoes.css">
+<script src="../js/menu-opcoes.js"></script>
 
-		<ul>
-			<li><a href="#">Produtos</a></li>
-			<li><a href="#">Funcionários</a></li>
-			<li><a href="#">Fornecedores</a></li>
-		</ul>
-	</details>
+<div class="menu">
+	<div class="item-menu">
+		<h2 class="titulo titulo-desativo" onclick="mostrarConteudoMenu(this)">Cadastro</h1>
+
+		<div class="conteudo-menu-desativado">
+			<p><a href="#">Opcao 1</a></p>
+			<p>Opcao 2</p>
+			<p>Opcao 3</p>
+		</div>
+	</div>
+
+	<div class="item-menu">
+		<h1 class="titulo titulo-desativo" onclick="mostrarConteudoMenu(this)">Cadastro</h1>
+
+		<div class="conteudo-menu-desativado">
+			<p>Opcao 1</p>
+			<p>Opcao 2</p>
+			<p>Opcao 3</p>
+		</div>
+	</div>
 </div>
